--- a/01/presentation.html
+++ b/01/presentation.html
@@ -33,36 +33,36 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#/slide-org54240dd">はじめに</a></li>
-<li><a href="#/slide-orge508ec0">DevOpsを学ぶ理由</a></li>
-<li><a href="#/slide-org4d03f3a">なんとなくDevOpsを知る</a></li>
-<li><a href="#/slide-org6d43852">議論</a></li>
-<li><a href="#/slide-org8270740">勉強会のアウトライン確定</a></li>
-<li><a href="#/slide-org630e722">インフラ決定</a></li>
+<li><a href="#/slide-org0a3bbca">はじめに</a></li>
+<li><a href="#/slide-org8823b6b">DevOpsを学ぶ理由</a></li>
+<li><a href="#/slide-org77c9041">なんとなくDevOpsを知る</a></li>
+<li><a href="#/slide-orgb78debc">議論</a></li>
+<li><a href="#/slide-org2363a1b">勉強会のアウトライン確定</a></li>
+<li><a href="#/slide-orgf0d2a0e">インフラ決定</a></li>
 </ul>
 </div>
 </div>
 </section>
 
 <section>
-<section id="slide-org54240dd">
-<h2 id="org54240dd">はじめに</h2>
-<div class="outline-text-2" id="text-org54240dd">
+<section id="slide-org0a3bbca">
+<h2 id="org0a3bbca">はじめに</h2>
+<div class="outline-text-2" id="text-org0a3bbca">
 </div>
 </section>
-<section id="slide-orgccdfa3e" data-background="fig/kikori.jpg">
-<h4 id="orgccdfa3e">頑張る木こり</h4>
+<section id="slide-org9441d73" data-background="fig/kikori.jpg">
+<h4 id="org9441d73">頑張る木こり</h4>
 </section>
-<section id="slide-orge89bcd4">
-<h4 id="orge89bcd4">失敗の轍をたどりつつある</h4>
+<section id="slide-orgebe7efe">
+<h4 id="orgebe7efe">失敗の轍をたどりつつある</h4>
 <ul>
 <li>開発フェーズは流れに乗ってきた</li>
 <li><font color="red">運用とプロジェクト構成</font>に問題がある</li>
 
 </ul>
 </section>
-<section id="slide-org8a4ff46">
-<h4 id="org8a4ff46">なぜか？</h4>
+<section id="slide-org40f6292">
+<h4 id="org40f6292">なぜか？</h4>
 <p>
 我々が「運用」の内容を再定義をできていないから
 </p>
@@ -71,8 +71,8 @@
 すぐお隣ではDevOpsが既に解決しているのに&#x2026;
 </p>
 </section>
-<section id="slide-orgbc0d666">
-<h4 id="orgbc0d666">DevOps？</h4>
+<section id="slide-org326b9d7">
+<h4 id="org326b9d7">DevOps？</h4>
 <blockquote>
 <p>
 DevOps is a cultural movement that changes how individuals think about their work
@@ -84,8 +84,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 (Davis &amp; Daniels 2016, "Effective DevOps")
 </p>
 </section>
-<section id="slide-org0b7b917">
-<h4 id="org0b7b917">文化の伝播を阻むもの</h4>
+<section id="slide-orga427114">
+<h4 id="orga427114">文化の伝播を阻むもの</h4>
 <ul>
 <li>地理的要因</li>
 
@@ -94,8 +94,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 我々の場合: <font color="red">言語</font>
 </p>
 </section>
-<section id="slide-orgd0c1316">
-<h4 id="orgd0c1316">R言語</h4>
+<section id="slide-orge80fb28">
+<h4 id="orge80fb28">R言語</h4>
 <p>
 資源研究Cにおけるシェア率No.1
 </p>
@@ -110,14 +110,14 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </ul>
 
 </section>
-<section id="slide-orgbbef59e">
-<h4 id="orgbbef59e">私たち研究者</h4>
+<section id="slide-orgada8397">
+<h4 id="orgada8397">私たち研究者</h4>
 <p>
 開発者とパラレルワールドに生きている
 </p>
 </section>
-<section id="slide-org4cadb01">
-<h4 id="org4cadb01">どんな問題が起きるか？</h4>
+<section id="slide-orge08f221">
+<h4 id="orge08f221">どんな問題が起きるか？</h4>
 <ul>
 <li>そもそも問題に気づかない</li>
 <li>それを学ぶ必要性がわからない</li>
@@ -127,8 +127,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </ul>
 
 </section>
-<section id="slide-org7a80e0c">
-<h4 id="org7a80e0c">結果として</h4>
+<section id="slide-orgca0215e">
+<h4 id="orgca0215e">結果として</h4>
 <p>
 運用がいつまでも開発のレベルに追いつかない
 </p>
@@ -138,49 +138,49 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </p>
 
 </section>
-<section id="slide-orgf43fa61">
-<h4 id="orgf43fa61">この勉強会の目的</h4>
+<section id="slide-org8755cf8">
+<h4 id="org8755cf8">この勉強会の目的</h4>
 <p>
 文化伝播をたすけること
 </p>
 </section>
 </section>
 <section>
-<section id="slide-orge508ec0">
-<h2 id="orge508ec0">DevOpsを学ぶ理由</h2>
-<div class="outline-text-2" id="text-orge508ec0">
+<section id="slide-org8823b6b">
+<h2 id="org8823b6b">DevOpsを学ぶ理由</h2>
+<div class="outline-text-2" id="text-org8823b6b">
 </div>
 </section>
-<section id="slide-org04c1ea7">
-<h4 id="org04c1ea7">資源評価への要求，ますます高く</h4>
-<div class="outline-text-4" id="text-org04c1ea7">
+<section id="slide-orgad0049d">
+<h4 id="orgad0049d">資源評価への要求，ますます高く</h4>
+<div class="outline-text-4" id="text-orgad0049d">
 </div>
 <ul class="org-ul">
-<li><a id="org581dcec"></a>本プロジェクトの「成功」とは？<br />
+<li><a id="org080c37e"></a>本プロジェクトの「成功」とは？<br />
 <ul class="org-ul">
-<li><a id="org6ce8ef1"></a>合理的管理<br /></li>
-<li><a id="orgd6b389f"></a>ステークホルダーの相互理解<br /></li>
+<li><a id="orgd2b1e7c"></a>合理的管理<br /></li>
+<li><a id="org8aed8ba"></a>ステークホルダーの相互理解<br /></li>
 </ul>
 </li>
 </ul>
 </section>
-<section id="slide-org5996623">
-<h4 id="org5996623">なにが必要？</h4>
-<div class="outline-text-4" id="text-org5996623">
+<section id="slide-orgedd8aed">
+<h4 id="orgedd8aed">なにが必要？</h4>
+<div class="outline-text-4" id="text-orgedd8aed">
 </div>
 <ul class="org-ul">
-<li><a id="org0fa8351"></a>きめ細やかな計算シナリオ<br /></li>
-<li><a id="org227a0bb"></a>徹底的な議論<br /></li>
-<li><a id="org55b1573"></a>要求への素早い対応<br /></li>
+<li><a id="orgcddbeff"></a>きめ細やかな計算シナリオ<br /></li>
+<li><a id="org0ed0883"></a>徹底的な議論<br /></li>
+<li><a id="org89ffc6d"></a>要求への素早い対応<br /></li>
 </ul>
 </section>
-<section id="slide-orgffcd46c">
-<h4 id="orgffcd46c">できますか？</h4>
+<section id="slide-org975ad2f">
+<h4 id="org975ad2f">できますか？</h4>
 <p>
 <b>無理です</b>
 </p>
 <ul class="org-ul">
-<li><a id="orge87a267"></a>理由<br />
+<li><a id="org1407ce1"></a>理由<br />
 <p>
 計算・提示・議論 のサイクルを増やすには
 </p>
@@ -191,34 +191,34 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </li>
 </ul>
 </section>
-<section id="slide-org3919712">
-<h4 id="org3919712">では，やらないのですか？</h4>
+<section id="slide-org8d3e896">
+<h4 id="org8d3e896">では，やらないのですか？</h4>
 <p>
 それは許されない
 </p>
 </section>
-<section id="slide-org7c80c3f">
-<h4 id="org7c80c3f">悪いニュース</h4>
-<div class="outline-text-4" id="text-org7c80c3f">
+<section id="slide-org688a287">
+<h4 id="org688a287">悪いニュース</h4>
+<div class="outline-text-4" id="text-org688a287">
 </div>
 <ul class="org-ul">
-<li><a id="org2f3e0cf"></a>さらなる負担増<br />
+<li><a id="orgd1bf96a"></a>さらなる負担増<br />
 <p>
 魚種拡大 <del>（正気ですか？）</del>
 </p>
 </li>
 </ul>
 </section>
-<section id="slide-org33103e4">
-<h4 id="org33103e4">研究もしたい</h4>
-<div class="outline-text-4" id="text-org33103e4">
+<section id="slide-orgdbb0528">
+<h4 id="orgdbb0528">研究もしたい</h4>
+<div class="outline-text-4" id="text-orgdbb0528">
 </div>
 <ul class="org-ul">
-<li><a id="org831f80e"></a>データ資産が活用されていない<br /></li>
+<li><a id="orgd113213"></a>データ資産が活用されていない<br /></li>
 </ul>
 </section>
-<section id="slide-org80777ea">
-<h4 id="org80777ea">つまり</h4>
+<section id="slide-org8f46246">
+<h4 id="org8f46246">つまり</h4>
 <p>
 「木こり」を笑っている場合ではない
 </p>
@@ -231,8 +231,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 損益分岐点はとっくに過ぎている
 </p>
 </section>
-<section id="slide-orge4e5d4e">
-<h4 id="orge4e5d4e">どうするべきか？</h4>
+<section id="slide-org2112b12">
+<h4 id="org2112b12">どうするべきか？</h4>
 <p>
 我々の仕事をあるべき姿に設計しなおす
 </p>
@@ -241,27 +241,27 @@ enabling people and teams to practice their crafts in effective and lasting ways
 道標: DevOps
 </p>
 </section>
-<section id="slide-org017faf3">
-<h4 id="org017faf3">大まかに言うと</h4>
+<section id="slide-org23fd9e7">
+<h4 id="org23fd9e7">大まかに言うと</h4>
 </section>
-<section id="slide-orgd2c712b">
-<h4 id="orgd2c712b">ただし</h4>
+<section id="slide-org052f9ff">
+<h4 id="org052f9ff">ただし</h4>
 
 <div class="figure">
 <p><img src="fig/polygraph.jpg" alt="polygraph.jpg" />
 </p>
 </div>
 </section>
-<section id="slide-org17a4e5a">
-<h4 id="org17a4e5a">優れた翻訳</h4>
+<section id="slide-orge747d1e">
+<h4 id="orge747d1e">優れた翻訳</h4>
 
 <div class="figure">
 <p><img src="fig/ccopy.jpg" alt="ccopy.jpg" />
 </p>
 </div>
 </section>
-<section id="slide-orgfd7481c">
-<h4 id="orgfd7481c">DevOpsを学ぶ理由</h4>
+<section id="slide-org5967929">
+<h4 id="org5967929">DevOpsを学ぶ理由</h4>
 <ul>
 <li class="fragment appear">我々はもう「開発」しているから</li>
 <li class="fragment appear">横着ではなくレシピだから</li>
@@ -271,23 +271,23 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </section>
 </section>
 <section>
-<section id="slide-org5a493af" data-background="fig/large.jpg" data-background-size="800px">
-<h3 id="org5a493af">我々はもう「開発」している</h3>
+<section id="slide-org3ef93e3" data-background="fig/large.jpg" data-background-size="800px">
+<h3 id="org3ef93e3">我々はもう「開発」している</h3>
 </section>
-<section id="slide-org0cbce58">
-<h4 id="org0cbce58">あなたは「開発」していますか？</h4>
+<section id="slide-org498faff">
+<h4 id="org498faff">あなたは「開発」していますか？</h4>
 </section>
-<section id="slide-org7cc274b">
-<h4 id="org7cc274b">あなたはプログラムを書きますか？</h4>
+<section id="slide-orgf604887">
+<h4 id="orgf604887">あなたはプログラムを書きますか？</h4>
 </section>
-<section id="slide-orge891904">
-<h4 id="orge891904">私たちがどこにいるのかを認識しましょう</h4>
+<section id="slide-orgb8cca93">
+<h4 id="orgb8cca93">私たちがどこにいるのかを認識しましょう</h4>
 </section>
-<section id="slide-orgb88bb0b">
-<h4 id="orgb88bb0b">私たちはプログラマより「開発」していることもある</h4>
+<section id="slide-org55188bc">
+<h4 id="org55188bc">私たちはプログラマより「開発」していることもある</h4>
 </section>
-<section id="slide-orgccdfe0a">
-<h4 id="orgccdfe0a">もう「開発」しているんです</h4>
+<section id="slide-orgb604ab7">
+<h4 id="orgb604ab7">もう「開発」しているんです</h4>
 <ul>
 <li>仕事の要件がソフトウェアと同じだから</li>
 <li>働き方が開発者と同じだから</li>
@@ -295,8 +295,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-org284e7f9">
-<h4 id="org284e7f9">仕事の要件がソフトウェアと同じだから</h4>
+<section id="slide-org38a0edd">
+<h4 id="org38a0edd">仕事の要件がソフトウェアと同じだから</h4>
 <ul>
 <li class="fragment appear">解決すべき問題がある</li>
 <li class="fragment appear">データに対して何らかの処理をする</li>
@@ -305,16 +305,16 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-org135d4e4">
-<h4 id="org135d4e4">仕事のやり方が開発者と同じだから</h4>
+<section id="slide-org9b2c7b2">
+<h4 id="org9b2c7b2">仕事のやり方が開発者と同じだから</h4>
 <ul>
 <li class="fragment appear">コンピュータを使う</li>
 <li class="fragment appear">複数人で作業する</li>
 
 </ul>
 </section>
-<section id="slide-orgadc91a8">
-<h4 id="orgadc91a8">プロジェクト構成要素がソフトウェアと同じだから</h4>
+<section id="slide-orgb3736f9">
+<h4 id="orgb3736f9">プロジェクト構成要素がソフトウェアと同じだから</h4>
 <ul>
 <li>顧客</li>
 <li>製品</li>
@@ -322,22 +322,22 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-org2564515">
-<h4 id="org2564515">顧客？</h4>
+<section id="slide-org6c275b8">
+<h4 id="org6c275b8">顧客？</h4>
 <ul>
 <li>水産庁</li>
 <li>漁業者</li>
 
 </ul>
 </section>
-<section id="slide-org2164485">
-<h4 id="org2164485">製品？</h4>
+<section id="slide-org7cd9570">
+<h4 id="org7cd9570">製品？</h4>
 <p>
 資源評価
 </p>
 </section>
-<section id="slide-org59f1b51">
-<h4 id="org59f1b51">一般的なソフトウェア製品の構成</h4>
+<section id="slide-org966edb5">
+<h4 id="org966edb5">一般的なソフトウェア製品の構成</h4>
 <p>
 図を入れる
 </p>
@@ -349,50 +349,50 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-org5618557">
-<h4 id="org5618557">データ？</h4>
-<div class="outline-text-4" id="text-org5618557">
+<section id="slide-orga6aa3af">
+<h4 id="orga6aa3af">データ？</h4>
+<div class="outline-text-4" id="text-orga6aa3af">
 </div>
 <ul class="org-ul">
-<li><a id="org9039175"></a>漁獲量<br /></li>
-<li><a id="org512a12d"></a>生物データ<br /></li>
-<li><a id="org69c4408"></a>パラメータ<br /></li>
-<li><a id="org247f286"></a>文章<br /></li>
+<li><a id="orgf87a3b2"></a>漁獲量<br /></li>
+<li><a id="orgb7402c6"></a>生物データ<br /></li>
+<li><a id="orgfc682e6"></a>パラメータ<br /></li>
+<li><a id="org3fc808b"></a>文章<br /></li>
 </ul>
 </section>
-<section id="slide-org21a9d86">
-<h4 id="org21a9d86">コード？</h4>
-<div class="outline-text-4" id="text-org21a9d86">
+<section id="slide-org3347f2c">
+<h4 id="org3347f2c">コード？</h4>
+<div class="outline-text-4" id="text-org3347f2c">
 </div>
 <ul class="org-ul">
-<li><a id="orgcc848e2"></a>計算プログラム<br /></li>
-<li><a id="org6565459"></a>作図プログラム<br /></li>
-<li><a id="org47f2b26"></a>文書整形プログラム<br /></li>
+<li><a id="orgadbbb26"></a>計算プログラム<br /></li>
+<li><a id="org3ceeb38"></a>作図プログラム<br /></li>
+<li><a id="orgae9a49f"></a>文書整形プログラム<br /></li>
 </ul>
 </section>
-<section id="slide-org11b4c40">
-<h4 id="org11b4c40">テスト？</h4>
-<div class="outline-text-4" id="text-org11b4c40">
+<section id="slide-orgbb0c98d">
+<h4 id="orgbb0c98d">テスト？</h4>
+<div class="outline-text-4" id="text-orgbb0c98d">
 </div>
 <ul class="org-ul">
-<li><a id="org05df315"></a>プログラムの動作<br /></li>
-<li><a id="org3e0ae7c"></a>計算結果<br /></li>
-<li><a id="org5db5f01"></a>データの仕様<br /></li>
-<li><a id="orgbe7a545"></a>誤字脱字<br /></li>
-<li><a id="org269ced0"></a>その他改善案すべて<br /></li>
+<li><a id="org0a1b0d6"></a>プログラムの動作<br /></li>
+<li><a id="org162abd6"></a>計算結果<br /></li>
+<li><a id="org4801144"></a>データの仕様<br /></li>
+<li><a id="org49477e0"></a>誤字脱字<br /></li>
+<li><a id="orgbd91101"></a>その他改善案すべて<br /></li>
 </ul>
 </section>
-<section id="slide-org6f79b05">
-<h4 id="org6f79b05">ドキュメント？</h4>
-<div class="outline-text-4" id="text-org6f79b05">
+<section id="slide-org2487729">
+<h4 id="org2487729">ドキュメント？</h4>
+<div class="outline-text-4" id="text-org2487729">
 </div>
 <ul class="org-ul">
-<li><a id="org43b7100"></a>報告書<br /></li>
-<li><a id="orgf24e2eb"></a>プレゼンテーションファイル<br /></li>
+<li><a id="org91e4855"></a>報告書<br /></li>
+<li><a id="org46f1383"></a>プレゼンテーションファイル<br /></li>
 </ul>
 </section>
-<section id="slide-org35877b5">
-<h4 id="org35877b5">プロジェクト構成要素がソフトウェアと同じだから</h4>
+<section id="slide-orga7afa6a">
+<h4 id="orga7afa6a">プロジェクト構成要素がソフトウェアと同じだから</h4>
 <ul>
 <li><del>顧客</del></li>
 <li><del>製品</del></li>
@@ -400,8 +400,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-org30717b6">
-<h4 id="org30717b6">Issue？</h4>
+<section id="slide-orgdb8bb59">
+<h4 id="orgdb8bb59">Issue？</h4>
 <ul>
 <li>プログラムのバグ</li>
 <li>誤字脱字</li>
@@ -411,8 +411,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </ul>
 
 </section>
-<section id="slide-orga9becc0">
-<h4 id="orga9becc0">以上のように</h4>
+<section id="slide-orgc987bb9">
+<h4 id="orgc987bb9">以上のように</h4>
 <p>
 我々の仕事の本質: ソフトウェア開発者と同じ
 </p>
@@ -425,11 +425,11 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </section>
 </section>
 <section>
-<section id="slide-org4ea0ce9" data-background="fig/cook.jpg">
-<h3 id="org4ea0ce9">横着ではなくレシピ</h3>
+<section id="slide-org553e7d6" data-background="fig/cook.jpg">
+<h3 id="org553e7d6">横着ではなくレシピ</h3>
 </section>
-<section id="slide-orge788b6a">
-<h4 id="orge788b6a">自動化と聞いて眉を顰める風潮を感じる</h4>
+<section id="slide-org7c80692">
+<h4 id="org7c80692">自動化と聞いて眉を顰める風潮を感じる</h4>
 <ul>
 <li>いいから仕事してよ</li>
 <li>手を抜きたいだけでしょ</li>
@@ -437,8 +437,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-orgb89590c">
-<h4 id="orgb89590c">誤解を解きたい</h4>
+<section id="slide-org5d6b175">
+<h4 id="org5d6b175">誤解を解きたい</h4>
 <p>
 自動化は（ただの）構成要素
 </p>
@@ -452,20 +452,20 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </p>
 
 </section>
-<section id="slide-orge608fd5">
-<h4 id="orge608fd5">なぜ自動化する必要がある？</h4>
+<section id="slide-org9440068">
+<h4 id="org9440068">なぜ自動化する必要がある？</h4>
 <p>
 それが正しいから
 </p>
 </section>
-<section id="slide-orgbbfd964">
-<h4 id="orgbbfd964">「正しい」とは</h4>
+<section id="slide-orgb699970">
+<h4 id="orgb699970">「正しい」とは</h4>
 <p>
 対義語: 正しくない -&gt; 不正
 </p>
 </section>
-<section id="slide-org9671f05">
-<h4 id="org9671f05">不正の例</h4>
+<section id="slide-orgead7b0b">
+<h4 id="orgead7b0b">不正の例</h4>
 <p>
 マラソンのコースをショートカット
 </p>
@@ -475,8 +475,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 
 </ul>
 </section>
-<section id="slide-org2e4f365">
-<h4 id="org2e4f365">それに対して</h4>
+<section id="slide-org5b1ecbc">
+<h4 id="org5b1ecbc">それに対して</h4>
 <p>
 我々の仕事では
 </p>
@@ -487,8 +487,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </ul>
 
 </section>
-<section id="slide-org31f1212">
-<h4 id="org31f1212">なぜ？</h4>
+<section id="slide-orgba9bc31">
+<h4 id="orgba9bc31">なぜ？</h4>
 <p>
 仕事は旅行とは違うから
 </p>
@@ -498,8 +498,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </p>
 
 </section>
-<section id="slide-orgdffe515">
-<h4 id="orgdffe515">自動化していない状態とは？</h4>
+<section id="slide-orgf0202b9">
+<h4 id="orgf0202b9">自動化していない状態とは？</h4>
 <p>
 コンピュータからみた我々
 </p>
@@ -509,8 +509,8 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </p>
 
 </section>
-<section id="slide-org843beb0">
-<h4 id="org843beb0">だから</h4>
+<section id="slide-orgb7caf0a">
+<h4 id="orgb7caf0a">だから</h4>
 <p>
 レシピ（= DevOps）に従って，
 </p>
@@ -521,55 +521,55 @@ enabling people and teams to practice their crafts in effective and lasting ways
 </section>
 </section>
 <section>
-<section id="slide-org62697de">
-<h3 id="org62697de">よい副次的効果</h3>
-<div class="outline-text-3" id="text-org62697de">
+<section id="slide-orgbf26af2">
+<h3 id="orgbf26af2">よい副次的効果</h3>
+<div class="outline-text-3" id="text-orgbf26af2">
 </div>
 </section>
-<section id="slide-org0e3ac68">
-<h4 id="org0e3ac68">プロジェクトの透明性</h4>
+<section id="slide-orgef2f303">
+<h4 id="orgef2f303">プロジェクトの透明性</h4>
 <p>
 着任初日から働き始められる
 </p>
 </section>
-<section id="slide-org87ca13c">
-<h4 id="org87ca13c">学習文化</h4>
+<section id="slide-orga585ae6">
+<h4 id="orga585ae6">学習文化</h4>
 <ul>
 <li>教え合い</li>
 <li>成長速度の加速</li>
 
 </ul>
 </section>
-<section id="slide-org64dbb39">
-<h4 id="org64dbb39">引き継がれなかったら意味がない</h4>
+<section id="slide-orga5984a7">
+<h4 id="orga5984a7">引き継がれなかったら意味がない</h4>
 
 <div class="figure">
 <p><img src="fig/phaitos.jpg" alt="phaitos.jpg" />
 </p>
 </div>
 </section>
-<section id="slide-orgd50ba54">
-<h4 id="orgd50ba54">時間と心のゆとり</h4>
+<section id="slide-org05b6175">
+<h4 id="org05b6175">時間と心のゆとり</h4>
 </section>
 </section>
 <section>
-<section id="slide-org52f8932">
-<h3 id="org52f8932">まとめ</h3>
+<section id="slide-org1f0857b">
+<h3 id="org1f0857b">まとめ</h3>
 <p>
 DevOpsを学ぶ必要性を感じましたか？
 </p>
 </section>
 </section>
 <section>
-<section id="slide-org4d03f3a">
-<h2 id="org4d03f3a">なんとなくDevOpsを知る</h2>
-<div class="outline-text-2" id="text-org4d03f3a">
+<section id="slide-org77c9041">
+<h2 id="org77c9041">なんとなくDevOpsを知る</h2>
+<div class="outline-text-2" id="text-org77c9041">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org4660f3c">
-<h3 id="org4660f3c">構成要素</h3>
+<section id="slide-orgfd6fc96">
+<h3 id="orgfd6fc96">構成要素</h3>
 <ul>
 <li>バージョン管理システム</li>
 <li>チケット管理システム</li>
@@ -586,8 +586,8 @@ DevOpsを学ぶ必要性を感じましたか？
 </section>
 </section>
 <section>
-<section id="slide-org40e8409">
-<h3 id="org40e8409">&#x2026;イメージ，湧きますか（不安）？</h3>
+<section id="slide-orgeeccd6a">
+<h3 id="orgeeccd6a">&#x2026;イメージ，湧きますか？</h3>
 <p>
 Any questions?
 </p>
@@ -600,13 +600,13 @@ Any questions?
 </section>
 </section>
 <section>
-<section id="slide-org6d43852">
-<h2 id="org6d43852">議論</h2>
+<section id="slide-orgb78debc">
+<h2 id="orgb78debc">議論</h2>
 </section>
 </section>
 <section>
-<section id="slide-org8270740">
-<h2 id="org8270740">勉強会のアウトライン確定</h2>
+<section id="slide-org2363a1b">
+<h2 id="org2363a1b">勉強会のアウトライン確定</h2>
 <ul>
 <li><a href="https://akikirinrin.github.io/shell2cd/outline.html">GitHub</a></li>
 <li><a href="../outline.html">file</a></li>
@@ -615,8 +615,8 @@ Any questions?
 </section>
 </section>
 <section>
-<section id="slide-org630e722">
-<h2 id="org630e722">インフラ決定</h2>
+<section id="slide-orgf0d2a0e">
+<h2 id="orgf0d2a0e">インフラ決定</h2>
 <ul>
 <li>Slack</li>
 <li>Microsoft Teams</li>
