:pencil: Fix typo

--- a/paper_as_software/01.html
+++ b/paper_as_software/01.html
@@ -227,7 +227,7 @@ speed dist
 <h3 id="orgeb18ef3">データ作成</h3>
 <div class="org-src-container">
 
-<pre  class="src src-R">usethis::use_data-raw<span style="color: #61bfff;">()</span>
+<pre  class="src src-R">usethis::use_data_raw<span style="color: #61bfff;">()</span>
 </pre>
 </div>
 </section>
